Removed signup from signin-only screen. Added AAD icon.

--- a/UI/SignInOnly.html
+++ b/UI/SignInOnly.html
@@ -21,7 +21,7 @@
         }
         #AADExchange {
           background-image: url(https://b2cdatastore.blob.core.windows.net/uix/AADExchange.svg);
-        }			
+        }		
         #AmazonExchange {
           background-image: url(https://b2cmultitenant.b2clogin.com/static/tenant/templates/idp_logos/colored/amazon.svg);
         }
@@ -91,6 +91,9 @@
         .buttons #cancel:before {
             content: url(https://b2cmultitenant.b2clogin.com/static/tenant/templates/images/left-arrow.svg);
         }
+		.create {
+			display: none;
+		}
     </style>
     <style id="idpselector">
         #SignInWithLogonNameExchange, #SignUpWithLogonEmailExchange, #SignUpWithLogonNameExchange {
