--- a/Policies/EmailOTPWithGoogleRecaptchaV3/ui/signin.html
+++ b/Policies/EmailOTPWithGoogleRecaptchaV3/ui/signin.html
@@ -4,7 +4,7 @@
 <html>
 <head>
     
-    <title>Sign up or sign in</title>
+    <title>Sign in</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
